Prevent header from wrapping.

--- a/src/Header.css
+++ b/src/Header.css
@@ -6,6 +6,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  white-space: nowrap;
 }
 
 .header > .left {
